<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.myappportfolio.MainActivityFragment"
    android:weightSum="4"
    android:orientation="vertical"
    android:id="@+id/parent_linear_layout"
    android:background="#cdd4dc">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:gravity="center"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/spotify_streamer_button"
            android:text="@string/spotify_streamer"
            android:textColor="@color/normal_text"
            android:background="@color/normal_background"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/scores_app_button"
            android:text="@string/scores_app"
            android:background="@color/normal_background"
            android:textColor="@color/normal_text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/library_app_button"
            android:text="@string/library_app"
            android:textColor="@color/normal_text"
            android:background="@color/normal_background"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/build_it_bigger_button"
            android:text="@string/build_it_bigger"
            android:background="@color/normal_background"
            android:textColor="@color/normal_text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/xyz_reader_app_button"
            android:text="@string/xyz_reader"
            android:textColor="@color/normal_text"
            android:background="@color/normal_background"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/capstone_app_button"
            android:text="@string/capstone_app"
            android:background="@color/capstone_background"
            android:textColor="@color/capstone_text"/>

    </LinearLayout>

</LinearLayout>
